--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,5 +9,13 @@ a {
 
 .costumeAttr { 
   background-color: aquamarine; 
-  width: 120px; 
+  width: 100%;
+  height: 50px;
 } 
+
+.costumeAttrNew { 
+  background-color:snow; 
+  width: 100%;
+  height: 50px;
+} 
+
