--- a/views/costumes.pug
+++ b/views/costumes.pug
@@ -7,8 +7,13 @@ block content
   div(class="row m-1") 
     each item in items  
       - let destination = `dispatch(\"/costumes/update?id=${item._id}\")` 
+      - let detail = `dispatch(\"/costumes/detail/?id=${item._id}")`
+      - let deleteItem = `dispatch(\"/costumes/delete/?id=${item._id}")` 
+
       div(class="row-sm-2", class="m-1") Item #{item.costume_type}(#{item.size}) is #{item.cost} 
         button.btn( class="btn-primary ml-1", onclick= destination) Update
+        button.btn( class="btn-success", onclick= detail) Details
+        button.btn( class="btn-danger", onclick= deleteItem) Delete
 
   p Search Results Costumes 
   p 
